--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,37 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400;1,700&display=swap");
 
 body {
-  background-color: #fbf7f5;
-  padding: 90px;
-  font-family: "Lato", sans-serif;
+    background-color: #fbf7f5;
+    padding: 5%;
+    font-family: "Lato", sans-serif;
 }
 
 .bio {
-  border-radius: 25px;
-  border: 2px solid #73ad21;
-  padding: 20px;
+    border-radius: 25px;
+    border: 2px solid #73ad21;
+    padding: 20px;
+}
+
+.funky {
+    text-decoration-line: underline;
+    text-decoration-style: wavy;
+    text-decoration-color: #be4f2a;
+}
+
+.whimsy {
+    background: linear-gradient(to left, #eaa534, #939a66 100%);
+    background-position: 0 100%;
+    background-size: 100% 3px;
+    background-repeat: repeat-x;
+}
+
+.jokes {
+    content: "";
+    transform: skew(-12deg) translateX(-50%);
+    background: rgba(115, 173, 33, 0.5);
+    z-index: -1;
+}
+
+.footer {
+  color: rgba(0, 0, 0, 0.25);;
 }
