--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,5 +33,29 @@ body {
 }
 
 .footer {
-  color: rgba(0, 0, 0, 0.25);;
+    color: rgba(0, 0, 0, 0.25);
+}
+
+a {
+    text-decoration: none;
+    color: #18272f;
+    font-weight: 700;
+    position: relative;
+}
+
+a::before {
+    content: "";
+    background-color: rgba(115, 173, 33, 0.5);
+    position: absolute;
+    left: 0;
+    bottom: 3px;
+    width: 100%;
+    height: 8px;
+    z-index: -1;
+    transition: all 0.3s ease-in-out;
+}
+
+a:hover::before {
+    bottom: 0;
+    height: 100%;
 }
