--- a/portfolio-react/src/App.css
+++ b/portfolio-react/src/App.css
@@ -7,7 +7,7 @@ footer {
   background-color: #ff5e6c;
   color: black;
   padding: 20px;
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   width: 100%;
 }
